--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "google-auth-library": "^10.2.0"
+    "google-auth-library": "^10.2.0",
+    "pg": "^8.16.3"
   }
 }
