--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
+    "googleapis": "^154.1.0",
     "pg": "^8.16.3"
   }
 }
