--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
     "googleapis": "^154.1.0",
+    "imapflow": "^1.0.195",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3"
   }
 }
