--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.2.5",
     "google-auth-library": "^10.2.0",
     "googleapis": "^154.1.0",
     "imapflow": "^1.0.195",
     "jsonwebtoken": "^9.0.2",
+    "libmime": "^5.3.7",
     "mailparser": "^3.7.4",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3"
