--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,20 +14,22 @@
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "fast-xml-parser": "^5.2.5",
-    "google-auth-library": "^10.2.0",
-    "googleapis": "^154.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "fast-xml-parser": "^4.5.1",
+    "google-auth-library": "^9.14.2",
+    "googleapis": "^144.0.0",
     "imapflow": "^1.0.195",
     "jsonwebtoken": "^9.0.2",
-    "libmime": "^5.3.7",
-    "mailparser": "^3.7.4",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.6",
-    "openai": "^5.23.1",
-    "pg": "^8.16.3"
+    "libmime": "^5.3.5",
+    "mailparser": "^3.7.2",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.16",
+    "openai": "^4.77.0",
+    "pg": "^8.13.1"
   }
 }
